Source/Alternet.UI.Pal/Api/TextBox.Api.h

using namespace Alternet::UI;
ALTERNET_UI_API TextBox* TextBox_Create_()
{
    return MarshalExceptions<TextBox*>([&](){
        return new TextBox();
    });
}
ALTERNET_UI_API int TextBox_GetTextWrap_(TextBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetTextWrap();
    });
}
ALTERNET_UI_API void TextBox_SetTextWrap_(TextBox* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetTextWrap(value);
    });
}
ALTERNET_UI_API int TextBox_GetTextAlign_(TextBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetTextAlign();
    });
}
ALTERNET_UI_API void TextBox_SetTextAlign_(TextBox* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetTextAlign(value);
    });
}
ALTERNET_UI_API char16_t* TextBox_GetReportedUrl_(TextBox* obj)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetReportedUrl());
    });
}
ALTERNET_UI_API c_bool TextBox_GetEditControlOnly_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetEditControlOnly();
    });
}
ALTERNET_UI_API void TextBox_SetEditControlOnly_(TextBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetEditControlOnly(value);
    });
}
ALTERNET_UI_API c_bool TextBox_GetReadOnly_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetReadOnly();
    });
}
ALTERNET_UI_API void TextBox_SetReadOnly_(TextBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetReadOnly(value);
    });
}
ALTERNET_UI_API void* TextBox_GetValidator_(TextBox* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetValidator();
    });
}
ALTERNET_UI_API void TextBox_SetValidator_(TextBox* obj, void* value)
{
    MarshalExceptions<void>([&](){
        obj->SetValidator(value);
    });
}
ALTERNET_UI_API c_bool TextBox_GetMultiline_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetMultiline();
    });
}
ALTERNET_UI_API void TextBox_SetMultiline_(TextBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetMultiline(value);
    });
}
ALTERNET_UI_API c_bool TextBox_GetIsRichEdit_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsRichEdit();
    });
}
ALTERNET_UI_API void TextBox_SetIsRichEdit_(TextBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetIsRichEdit(value);
    });
}
ALTERNET_UI_API c_bool TextBox_GetHasSelection_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetHasSelection();
    });
}
ALTERNET_UI_API c_bool TextBox_GetIsModified_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsModified();
    });
}
ALTERNET_UI_API void TextBox_SetIsModified_(TextBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetIsModified(value);
    });
}
ALTERNET_UI_API c_bool TextBox_GetCanCopy_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanCopy();
    });
}
ALTERNET_UI_API c_bool TextBox_GetCanCut_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanCut();
    });
}
ALTERNET_UI_API c_bool TextBox_GetCanPaste_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanPaste();
    });
}
ALTERNET_UI_API c_bool TextBox_GetCanRedo_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanRedo();
    });
}
ALTERNET_UI_API c_bool TextBox_GetCanUndo_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanUndo();
    });
}
ALTERNET_UI_API c_bool TextBox_GetIsEmpty_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsEmpty();
    });
}
ALTERNET_UI_API char16_t* TextBox_GetEmptyTextHint_(TextBox* obj)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetEmptyTextHint());
    });
}
ALTERNET_UI_API void TextBox_SetEmptyTextHint_(TextBox* obj, const char16_t* value)
{
    MarshalExceptions<void>([&](){
        obj->SetEmptyTextHint(value);
    });
}
ALTERNET_UI_API c_bool TextBox_GetHideSelection_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetHideSelection();
    });
}
ALTERNET_UI_API void TextBox_SetHideSelection_(TextBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetHideSelection(value);
    });
}
ALTERNET_UI_API c_bool TextBox_GetProcessTab_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetProcessTab();
    });
}
ALTERNET_UI_API void TextBox_SetProcessTab_(TextBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetProcessTab(value);
    });
}
ALTERNET_UI_API c_bool TextBox_GetProcessEnter_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetProcessEnter();
    });
}
ALTERNET_UI_API void TextBox_SetProcessEnter_(TextBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetProcessEnter(value);
    });
}
ALTERNET_UI_API c_bool TextBox_GetIsPassword_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsPassword();
    });
}
ALTERNET_UI_API void TextBox_SetIsPassword_(TextBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetIsPassword(value);
    });
}
ALTERNET_UI_API c_bool TextBox_GetAutoUrl_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetAutoUrl();
    });
}
ALTERNET_UI_API void TextBox_SetAutoUrl_(TextBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAutoUrl(value);
    });
}
ALTERNET_UI_API c_bool TextBox_GetHideVertScrollbar_(TextBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetHideVertScrollbar();
    });
}
ALTERNET_UI_API void TextBox_SetHideVertScrollbar_(TextBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetHideVertScrollbar(value);
    });
}
ALTERNET_UI_API void* TextBox_CreateTextBox_(void* validator)
{
    return MarshalExceptions<void*>([&](){
        return TextBox::CreateTextBox(validator);
    });
}
ALTERNET_UI_API int TextBox_GetLineLength_(TextBox* obj, int64_t lineNo)
{
    return MarshalExceptions<int>([&](){
        return obj->GetLineLength(lineNo);
    });
}
ALTERNET_UI_API char16_t* TextBox_GetLineText_(TextBox* obj, int64_t lineNo)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetLineText(lineNo));
    });
}
ALTERNET_UI_API void TextBox_SetMaxLength_(TextBox* obj, uint64_t len)
{
    MarshalExceptions<void>([&](){
        obj->SetMaxLength(len);
    });
}
ALTERNET_UI_API void TextBox_SetSelection_(TextBox* obj, int64_t from, int64_t to)
{
    MarshalExceptions<void>([&](){
        obj->SetSelection(from, to);
    });
}
ALTERNET_UI_API void TextBox_SelectAll_(TextBox* obj)
{
    MarshalExceptions<void>([&](){
        obj->SelectAll();
    });
}
ALTERNET_UI_API void TextBox_SelectNone_(TextBox* obj)
{
    MarshalExceptions<void>([&](){
        obj->SelectNone();
    });
}
ALTERNET_UI_API void TextBox_Undo_(TextBox* obj)
{
    MarshalExceptions<void>([&](){
        obj->Undo();
    });
}
ALTERNET_UI_API void TextBox_WriteText_(TextBox* obj, const char16_t* text)
{
    MarshalExceptions<void>([&](){
        obj->WriteText(text);
    });
}
ALTERNET_UI_API char16_t* TextBox_GetRange_(TextBox* obj, int64_t from, int64_t to)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetRange(from, to));
    });
}
ALTERNET_UI_API char16_t* TextBox_GetStringSelection_(TextBox* obj)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetStringSelection());
    });
}
ALTERNET_UI_API void TextBox_EmptyUndoBuffer_(TextBox* obj)
{
    MarshalExceptions<void>([&](){
        obj->EmptyUndoBuffer();
    });
}
ALTERNET_UI_API c_bool TextBox_IsValidPosition_(TextBox* obj, int64_t pos)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->IsValidPosition(pos);
    });
}
ALTERNET_UI_API int64_t TextBox_GetLastPosition_(TextBox* obj)
{
    return MarshalExceptions<int64_t>([&](){
        return obj->GetLastPosition();
    });
}
ALTERNET_UI_API int64_t TextBox_GetSelectionStart_(TextBox* obj)
{
    return MarshalExceptions<int64_t>([&](){
        return obj->GetSelectionStart();
    });
}
ALTERNET_UI_API int64_t TextBox_GetSelectionEnd_(TextBox* obj)
{
    return MarshalExceptions<int64_t>([&](){
        return obj->GetSelectionEnd();
    });
}
ALTERNET_UI_API void TextBox_SetEventCallback_(TextBox::TextBoxEventCallbackType callback)
{
    TextBox::SetEventCallback(callback);
}